force-app/main/default/objects/Sales_Order__c/Sales_Order__c.object-meta.xml
<CustomObject>
    <description>Sales orders synchronized with Microsoft Dynamics 365 Business Central ERP system.</description>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO-{00000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>