force-app/main/default/objects/Sales_Order__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Stable idempotency and tracing key shared by Salesforce, middleware, and Business Central.</description>
    <externalId>true</externalId>
    <label>Correlation ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>