force-app/main/default/objects/Sales_Order__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>ISO 4217 transaction currency sent to Business Central.</description>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>