force-app/main/default/objects/Sales_Order__c/fields/ERP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Id__c</fullName>
    <description>External identifier from Dynamics 365 Business Central.</description>
    <externalId>true</externalId>
    <label>ERP Order ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>