force-app/main/default/objects/Sales_Order__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <description>Timestamp of the most recent ERP synchronization attempt.</description>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>