force-app/main/default/objects/Sales_Order__c/fields/Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error_Message__c</fullName>
    <description>Error details from the last failed ERP sync.</description>
    <label>Sync Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>