force-app/main/default/objects/Sales_Order__c/validationRules/Positive_Amount_On_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Amount_On_Submit</fullName>
    <active>true</active>
    <description>Submitted orders require a positive amount.</description>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Status__c, &quot;Submitted&quot;),
    ISPICKVAL(Status__c, &quot;Syncing&quot;),
    ISPICKVAL(Status__c, &quot;Synced&quot;)
  ),
  OR(ISBLANK(Total_Amount__c), Total_Amount__c &lt;= 0)
)</errorConditionFormula>
    <errorDisplayField>Total_Amount__c</errorDisplayField>
    <errorMessage>Total amount must be greater than zero before ERP sync.</errorMessage>
</ValidationRule>