force-app/main/default/objects/Sales_Order__c/listViews/All_Sales_Orders.listView-meta.xml
<ListView>
    <fullName>All_Sales_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>ERP_Order_Id__c</columns>
    <columns>Last_Sync_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Orders</label>
</ListView>